# CustomRenderer

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  imgui.ini  main.cu  questions.txt
libs/glad/: glad.cu  glad.h
libs/stb/: stb_image.h  stb_image_write.h
libs/stb/tests/caveview/: README.md
report/: luther-jonas-steiner-rafael-report.html
report/images/: adaptiveSampling.hdr  adaptiveSamplingSamples.hdr  cbox512sppCameraTest.hdr  cbox512sppDepthOfField.hdr  cbox512sppDepthOfFieldMitsuba.hdr  cbox512sppDistortionK1.hdr  cbox512sppDistortionK1K2.hdr  cbox512sppSquare.hdr  cbox512sppTriangle.hdr  cbox64spp.hdr  cbox64sppDenoised.hdr  cbox64sppVariance.hdr  envmap512spp.hdr  rockNormal.hdr  rockNormalMitsuba.hdr  rockTexture.hdr  rockTexture2.hdr  rockTextureMitsuba.hdr  spot.hdr  spotMitsuba.hdr  texturedEmitter.hdr
scenes/: ajax.xml  camera.xml  cameraTest.xml  cbox.xml  clocks.xml  denoiserTest.xml  environmentLightTest.xml  indoor.xml  normalMapTest.xml  odyssey.xml  spaceship.xml  spot.xml  sus.xml  textureTest.xml  texturedEmitterTest.xml  volumetric.xml
scenes/compOBJ/: MediumBoundingBoxz.mtl  astronaut.mtl  astronaut2.mtl  ladder.mtl  pool.mtl  poolLights.mtl  poolLightsFrame.mtl  water.mtl
scenes/finalOBJ/: pool.mtl  poolLightFrame.mtl  poolLightLamp.mtl  water.mtl
scenes/finalScenes/: cameraTest.xml  cbox.xml  envMapTest.xml  modellingMesh.xml  normalMapTest.xml  renderingCompetition2.xml  renderingCompetition3.xml
scenes/reportScenes/: adaptiveSampling.xml  cbox.xml  envMapTest.xml  renderingCompetition.xml  renderingCompetition2.xml  spot.xml  texturedEmitterTest.xml
src/: bsdf.cu  bsdf.h  camera.cu  camera.h  constants.h  cudaHelpers.cu  cudaHelpers.h  cuda_helpers.cu  cuda_helpers.h  hittable.h  hittableList.cu  hittableList.h  material.cu  material.h  scene.cu  scene.h  sphere.h
src/Acceleration/: bvh.cu  bvh.h
src/acceleration/: aabb.cu  aabb.h  bvh.cu  bvh.h
src/camera/: camera.cu  camera.h
src/denoise/: denoise.cu  denoise.h
src/emitters/: areaEmitter.h  areaLight.cu  areaLight.h  environmentEmitter.h
src/medium/: isotropicPhaseFunction.cu  isotropicPhaseFunction.h  medium.cu  medium.h
src/scene/: scene.cu  scene.h  sceneLoader.cu  sceneLoader.h
src/shapes/: sphere.cu  sphere.h  triangle.cu  triangle.h
src/textures/: imageTexture.cu  imageTexture.h
src/utility/: frame.h  meshLoader.cu  meshLoader.h  ray.cu  ray.h  sampler.h  vector.cu  vector.h  warp.h
